@@ -1,4 +1,5 @@
 {{$NEXT}}
+        . Remove test that comes from IO::Socket, is outdated and doesn't server anything. Fixes github issue #5
 
 0.31      2015-08-03 16:06:26CEST+0200 Europe/Paris
         . Requires PerlIO::via::Timeout 0.32, that reverts the previous fix that was broken
